# WorkingTime

./: README.md  build-debug-clang.sh
src/: .clang-format  commands.hpp  config.hpp  database.hpp  errors.hpp  main.cpp
tests/: CMakeLists.txt  build.sh  configure.sh  test.sh  test_command_parsing.cpp
